# cao-math

./: .gitignore  Cargo.toml  Makefile  README.md  globals.html  index.html
.github/workflows/: wasm-tests.yml  wasm.yml
assets/js/: search.json
classes/: array2f.html  array3f.html  hexagon.html  mat2f.html  mat3f.html  tensor2f.html  tensor3f.html  vec2f.html  vec3f.html
doc/: book.toml
doc/src/: SUMMARY.md  init.md
docs/: README.md  package-lock.json  package.json  tsconfig.json
src/: geometry.rs  hex.rs  lib.rs  mat.rs  point.rs  vec.rs  vectorization.rs
src/array/: array2.rs  array3.rs  mod.rs
src/hex/: hexagon.rs
src/mat/: js_mat2.rs  js_mat3.rs  mat2.rs  mat2f32.rs  mat3.rs  mat3_upper.rs  mat3f32.rs  mod.rs
src/tensor/: tensor2.rs  tensor3.rs
src/vec/: mod.rs  vec2.rs  vec2f32.rs  vec3.rs
src/vectorization/: mod.rs  tensor2.rs  vec2.rs  vec3.rs
tests/: browser_tests.rs  mat2.rs  mat3.rs  test_hex.rs  test_mat2.rs  test_mat3.rs  test_mat3_upper.rs  test_vec2.rs  tests.rs  web.rs
tests/implementations/: mod.rs  test_hex.rs  test_mat2.rs  test_mat3.rs  test_vec2.rs
www/: bench.js  index.html  index.js  package.json  webpack.config.js
