[package]
name = "cao-math"
version = "0.3.1"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
license="Apache-2.0"
repository="https://github.com/caolo-game/cao-math"
description="Simple linear algebra and [Hexagonal grid](https://www.redblobgames.com/grids/hexagons/#hex-to-pixel) implementations to help the Cao-Lo project."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version="0.2", features=["serde-serialize"] }
serde = "1"
serde_derive = "1"
serde_json = "1"

console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2" }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
